<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="costy.krzysiekz.com.costy.view.activity.fragment.PeopleFragment"
    android:id="@+id/fragment_people_id">

    <include layout="@layout/content_people" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_person_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_input_add" />

</FrameLayout>
